--- a/templates/less.hbs
+++ b/templates/less.hbs
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "{{fontName}}";
-  src: url("{{fontName}}.eot?") format("embedded-opentype");
+  src: url("{{fontsPath}}{{fontName}}.eot?") format("embedded-opentype");
 }
 
 @font-face {
   font-family: "{{fontName}}";
-  src: data-uri("{{fontName}}.woff") format("woff"),
-    url("{{fontName}}.ttf") format("truetype"),
-    url("{{fontName}}.svg#{{fontName}}") format("svg");
+  src: data-uri("{{fontsPath}}{{fontName}}.woff") format("woff"),
+    url("{{fontsPath}}{{fontName}}.ttf") format("truetype"),
+    url("{{fontsPath}}{{fontName}}.svg#{{fontName}}") format("svg");
   font-weight: normal;
   font-style: normal;
 }
