generate icon aliases

--- a/templates/less.hbs
+++ b/templates/less.hbs
@@ -35,3 +35,21 @@
   content: "\\{{this}}";
 }
 {{/each}}
+
+{{#if alias}}
+
+.alias-{{baseClass}}(@char) {
+  font-family: {{fontName}} !important;
+  @icon-font-styles();
+  &:before {
+    content: @char;
+  }
+}
+
+{{#each alias}}
+{{@key}} {
+  .alias-{{../baseClass}}("\\{{lookup ../codepoints this}}")
+}
+{{/each}}
+
+{{/if}}
