--- a/templates/less.hbs
+++ b/templates/less.hbs
@@ -25,9 +25,6 @@
 {{#each codepoints}}
 .{{../classPrefix}}{{@key}},
 {{/each}}
-{{#each alias}}
-{{@key}}:before,
-{{/each}}
 .{{baseClass}} {
   font-family: {{fontName}} !important;
   @icon-font-styles();
@@ -39,10 +36,18 @@
 }
 {{/each}}
 
-{{#each alias}}
-{{@key}} {
+{{#if alias}}
+.alias-{{baseClass}}(@char) {
   &:before {
-    content: "\\{{lookup ../codepoints this}}"
+    @icon-font-styles();
+    font-family: {{fontName}} !important;
+    content: @char;
   }
 }
+
+{{#each alias}}
+{{@key}} {
+  .alias-{{../baseClass}}("\\{{lookup ../codepoints this}}");
+}
 {{/each}}
+{{/if}}
