fix .html template
hadrcoded furkot name instead of {{fontName}}

--- a/templates/html.hbs
+++ b/templates/html.hbs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{fontName}}</title>
-	<link rel="stylesheet" href="furkot.css">
+	<link rel="stylesheet" href="{{fontName}}.css">
 	<style>
 		body {
 			font-family: sans-serif;
