--- a/templates/less.hbs
+++ b/templates/less.hbs
@@ -6,12 +6,10 @@
 
 @font-face {
   font-family: "{{fontName}}";
-  src: url("{{fontsPath}}{{fontName}}.eot?") format("embedded-opentype");
-}
-
-@font-face {
-  font-family: "{{fontName}}";
-  src: data-uri("{{fontsPath}}{{fontName}}.woff") format("woff"),
+  src: url("{{fontsPath}}{{fontName}}.eot");
+  src:
+    url("{{fontsPath}}{{fontName}}.eot?iefix") format("embedded-opentype"),
+    url("{{fontsPath}}{{fontName}}.woff") format("woff"),
     url("{{fontsPath}}{{fontName}}.ttf") format("truetype"),
     url("{{fontsPath}}{{fontName}}.svg#{{fontName}}") format("svg");
   font-weight: normal;
