add link to icon licenses

--- a/templates/html.hbs
+++ b/templates/html.hbs
@@ -11,6 +11,11 @@
 			padding: 10px 20px;
 		}
 
+    .license {
+      margin-top: 1em;
+      font-size: 14px;
+    }
+
 		.preview {
 			display: inline-block;
 			margin: 3px;
@@ -52,5 +57,8 @@
 		<span class="preview__label">{{this}}</span>
 	</div>
 	{{/each}}
+	<div class="license">
+	  <span>Icons licensed under their respective <a href="icon-license.html">licenses</a></span>
+ 	</div>
 </body>
 </html>
