--- a/templates/sprite.html.hbs
+++ b/templates/sprite.html.hbs
@@ -10,6 +10,11 @@
       padding: 10px 20px;
     }
 
+    .license {
+      margin-top: 1em;
+      font-size: 14px;
+    }
+
     .preview {
       display: inline-block;
       vertical-align: top;
@@ -60,6 +65,9 @@
     </div>
   </div>
   {{/each}}
+  </div>
+  <div class="license">
+    <span>Icons licensed under their respective <a href="icon-license.html">licenses</a></span>
   </div>
 </body>
 </html>
