--- a/templates/less.hbs
+++ b/templates/less.hbs
@@ -6,9 +6,7 @@
 
 @font-face {
   font-family: "{{fontName}}";
-  src:
-    url("{{fontsPath}}{{fontName}}.woff2") format("woff2"),
-    url("{{fontsPath}}{{fontName}}.woff") format("woff");
+  src: url("{{fontsPath}}{{fontName}}.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
